--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore compiled CSS files
-/dist/css/*.css
-/dist/css/*.css.map
+/dist/*.css
+/dist/*.css.map
 
 # Ignore node_modules directory
 /node_modules/
